#24 Use one common TransportOrderRepository interface and hide the specific JPA one